data/derived/comb/progs/unify/prog8518.ml.out
Characters 415-435:
  | Circ	(circ1,circ2)       -> eval(circ1,x,y)**2.0+eval(circ2,x,y)**2.0
                                ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
